--- a/Eration/templates/inc/navbar.html
+++ b/Eration/templates/inc/navbar.html
@@ -60,7 +60,7 @@
                             <li><a href="{% url 'collections' %}">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="./checkout.html">Update Profile</a></li>
+                                    <li><a href="{% url 'update' %}">Update Profile</a></li>
                                     <li><a href="./checkout.html">Add Members</a></li>
                                     <li><a href="./shoping-cart.html">Shopping Cart</a></li>
                                     <li><a href="{% url 'blog' %}">Blog</a></li>
