--- a/Eration/templates/registration/password_reset_form.html
+++ b/Eration/templates/registration/password_reset_form.html
@@ -19,7 +19,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary btn-block">Reset Password</button>
+        <button type="submit" class="btn btn-primary btn-block">Reset Password</button><br><br>
     </div>
 </div>
 </div>
