--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -71,14 +71,14 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="header__logo">
-                    <a href="/shop"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
+                    <a href="/Delivery"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-8">
                 <nav class="header__menu">
                     <ul>
                         <li class="active"><a href="/shop">Home</a></li>
-                        <li><a href="#">Pending List</a>
+                        <li><a href="#">Delivery</a>
                             <ul class="header__menu__dropdown">
                                 <li><a href="{% url 'cust_pending_list' %}">Pending Customer List</a></li>
                                 <li><a href="{% url 'approvemember' %}">Pending Membes</a></li>
