--- a/Ration1/templates/admin/card.html
+++ b/Ration1/templates/admin/card.html
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html' %}
+{% extends 'admin/index.html' %}
 {% load static %}
 {% block content %} 
 {% if message %}
@@ -9,33 +9,34 @@ alert("{{ message }}")
 <!-- Estimate_area start  -->
 <div class="Estimate_area overlay">
     <div class="container">
-        <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-5">
-                <div class="Estimate_info">
-                    <h3>Register to avail services</h3>
-                    <p>The Department of Civil Supplies functions under the Department of Food, Civil Supplies and Consumer Affairs of the Government of Kerala.</p>
-                    <a href="#" class="boxed-btn3">+91 9966336699</a>
-                </div>
-            </div>
-            <div class="col-xl-8 col-lg-8 col-md-7">
-                <div class="form">
-                    <form id="register-form" action="" method="post">
-                        {% csrf_token %}
-                        <div class="row">                          
-                            <div class="col-xl-12">
-                                <div class="input_field">
-                                    <label for="card">Card:</label>
-                                    <input type="card" name="card" placeholder="card color">
-                                    <input type="allowed_quantity" name="allowed_quantity" placeholder="Allowed quantity per card">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="text-center mb-4">The Department of Civil Supplies functions under the Department of Food, Civil Supplies and Consumer Affairs of the Government of Kerala.</p>
+                        <form id="register-form" action="" method="post">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="card">Card:</label>
+                                        <input type="text" name="card" class="form-control" placeholder="Card color">
+                                    </div>
                                 </div>
-                            </div>                          
-                            <div class="col-xl-12">
-                                <div class="input_field">
-                                    <input type="submit" value="Create Card Type" class="boxed-btn3-line">                                  
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="allowed_quantity">Allowed Quantity per Card:</label>
+                                        <input type="text" name="allowed_quantity" class="form-control" placeholder="Allowed quantity per card">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 text-center">
+                                    <div class="form-group">
+                                        <input type="submit" value="Create Card Type" class="btn btn-primary btn-lg">                                  
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
