--- a/Ration1/templates/shop/productslist.html
+++ b/Ration1/templates/shop/productslist.html
@@ -21,6 +21,38 @@
             </div>
         </div>
     </div>
+    <div class="filter-section">
+        <form method="GET" action="" class="filter-form">
+            <div class="form-group">
+                <label for="card">Select Card:</label>
+                <select name="card" class="form-control">
+                    <option value="">All Cards</option>
+                    {% for c in cards %}
+                        <option value="{{ c.id }}">{{ c.card }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="month">Select Month:</label>
+                <select name="month" class="form-control">
+                    <option value="">All Months</option>
+                    <option value="1">January</option>
+                    <option value="2">February</option>
+                    <option value="3">March</option>
+                    <option value="4">April</option>
+                    <option value="5">May</option>
+                    <option value="6">June</option>
+                    <option value="7">July</option>
+                    <option value="8">August</option>
+                    <option value="9">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Filter</button>
+        </form>
+    </div>
     <!-- slider_area_end -->
     <br>
     <br>
