--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="header__logo">
-                    <a href="/Delivery"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
+                    <a href="/Delivery"><img src="{% static 'assets/img/homedelivery.jpg' %}" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-8">
@@ -106,92 +106,6 @@
 {% block content %}
 {% endblock content %}   
 
-<!-- Banner Begin -->
-<div class="banner">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="banner__pic">
-                    <img src="{% static 'assets/img/banner/banner-11.jpg' %}" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="banner__pic">
-                    <img src="{% static 'assets/img/banner/banner-22.jpg' %}" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Banner End -->
-
-
-
- <!-- Blog Section Begin -->
- <section class="from-blog spad">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title from-blog__title">
-                    <h2>From The Blog</h2>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="blog__item">
-                    <div class="blog__item__pic">
-                        <img src="{% static 'assets/img/blog/blog-11.jpg' %}" alt="">
-                    </div>
-                    <div class="blog__item__text">
-                        <ul>
-                            <li><i class="fa fa-calendar-o"></i> Oct 1,2023</li>
-                            <li><i class="fa fa-comment-o"></i> 5</li>
-                        </ul>
-                        <h5><a href="#">Ration shop times</a></h5>
-                        <p>റേഷന്‍ കടകളുടെ നിലവിലെ പ്രവര്‍ത്തന സമയം:-
-                            8.00 am to 12.00 noon & 4.00 pm to 7.00 pm </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="blog__item">
-                    <div class="blog__item__pic">
-                        <img src="{% static 'assets/img/blog/blog-22.jpg' %}" alt="">
-                    </div>
-                    <div class="blog__item__text">
-                        <ul>
-                            <li><i class="fa fa-calendar-o"></i> Oct 1,2023</li>
-                            <li><i class="fa fa-comment-o"></i> 5</li>
-                        </ul>
-                        <h5><a href="#">Sandes മൊബൈൽ ആപ്പ്</a></h5>
-                        <p> 
-                            റേഷൻ കാർഡ് ഓൺലൈൻ ആപ്ലിക്കേഷൻ സ്റ്റാറ്റസ്, പ്രിന്റ് പാസ്‌വേഡ് എന്നിവ ലഭിക്കുന്നതിന് 
-                            Sandes മൊബൈൽ ആപ്പ് 
-                            ഡൗൺലോഡ് ചെയ്യുക. </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="blog__item">
-                    <div class="blog__item__pic">
-                        <img src="{% static 'assets/img/blog/blog-33.jpg' %}" alt="">
-                    </div>
-                    <div class="blog__item__text">
-                        <ul>
-                            <li><i class="fa fa-calendar-o"></i> Oct 1,2023</li>
-                            <li><i class="fa fa-comment-o"></i> 5</li>
-                        </ul>
-                        <h5><a href="#">Department of Civil supplies </a><a>& Consumer Affairs</a></h5>
-                        <p>The Civil Supplies Department discharges the important responsibilities of Public Distribution, enforcement of markets discipline and promotion of consumer awareness and protection of their interest. In the 60s and 70s it won many accolades for the pioneering achievements in the implementation of Universal Rationing System.t </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Blog Section End -->
-
 <!-- Footer Section Begin -->
 <footer class="footer spad">
     <div class="container">
@@ -199,7 +113,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer__about">
                     <div class="footer__about__logo">
-                        <a href="./index.html"><img src="{% static 'assetsimg/logo.png' %}" alt=""></a>
+                        <a href="/Delivery"><img src="{% static 'assetsimg/homedelivery.jpg' %}" alt=""></a>
                     </div>
                     <ul>
                         <li>Address: kerala</li>
