--- a/Ration1/templates/Delivery/index.html
+++ b/Ration1/templates/Delivery/index.html
@@ -46,7 +46,7 @@ alert("{{ message }}")
                         </div>
                     </div>
                 </div>
-                <div class="hero__item set-bg" data-setbg="{% static 'assets/img/hero/shop_1.jpg' %}">
+                <div class="hero__item set-bg" data-setbg="{% static 'assets/img/hero/delivery.png' %}">
                 </div>
             </div>
         </div>
