--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -71,19 +71,19 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="header__logo">
-                    <a href="/Delivery"><img src="{% static 'assets/img/homedelivery.jpg' %}" alt=""></a>
+                    <a href="/Delivery"><img src="{% static 'assets/img/hm.jpg' %}" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-8">
                 <nav class="header__menu">
                     <ul>
                         <li class="active"><a href="/Delivery">Home</a></li>
-                        <li><a href="#">Approved List</a>
+                        <li><a href="#">customers</a>
                             <ul class="header__menu__dropdown">
-                                <li><a href="{% url 'cust_viewShop' %}">Approved Customer List</a></li>
+                                <li><a href="{% url 'delivery-customer-list' %}">Customer List</a></li>
                             </ul>
                         </li>
-                        <li><a href="{% url 'order_placed' %}">Order</a></li>
+                        <li><a href="{% url 'delivery-order-history' %}">Orders</a></li>
                     </ul>
                 </nav>
     </div>
