--- a/Ration1/templates/admin/customer_list.html
+++ b/Ration1/templates/admin/customer_list.html
@@ -12,7 +12,7 @@
         <div id="page-inner">
             <h1>Registered Customer List</h1>
             <table class="table table-bordered table-striped table-hover">
-                <thead style="background-color: #b3e0a1;"> <!-- Light green background color for the table head -->
+                <thead style="background-color: #8c1aff;"> <!-- Light violet background color for the table head -->
                     <th class="info">Customer</th>
                     <th class="info">Ration Card Number</th>
                     <th class="info">Email</th>
@@ -59,7 +59,7 @@
         }
 
         th {
-            background-color: #b3e0a1; /* Light green background color for the table head */
+            background-color: #8c1aff; /* Light green background color for the table head */
             font-weight: bold;
         }
 
