--- a/Ration1/templates/admin/productsView.html
+++ b/Ration1/templates/admin/productsView.html
@@ -51,7 +51,7 @@
         }
 
         th {
-            background-color: #b3e0a1; /* Light green background color for the table head */
+            background-color: #8c1aff; /* Light green background color for the table head */
             font-weight: bold;
         }
 
