--- a/Ration1/templates/admin/shop_list.html
+++ b/Ration1/templates/admin/shop_list.html
@@ -13,7 +13,7 @@
             <h1>Pending Shop List</h1>
             <div class="table-wrapper">
                 <table class="table table-bordered table-striped table-hover">
-                    <thead style="background-color: #b3e0a1;"> <!-- Light green background color for the table head -->
+                    <thead style="background-color: #8c1aff;"> <!-- Light green background color for the table head -->
                         <th class="info">Customer</th>
                         <th class="info">License Number</th>
                         <th class="info">Email</th>
@@ -67,7 +67,7 @@
         }
 
         th {
-            background-color: #b3e0a1; /* Light green background color for the table head */
+            background-color: #8c1aff; /* Light green background color for the table head */
             font-weight: bold;
         }
 
