--- a/Ration1/templates/admin/Approvedshop.html
+++ b/Ration1/templates/admin/Approvedshop.html
@@ -5,7 +5,7 @@
     <hr style="width: 50%; margin: auto; border-color: #333;">
     <div class="table-wrapper">
         <table class="table table-bordered table-striped table-hover">
-            <thead style="background-color: #b3e0a1;">
+            <thead style="background-color: #8c1aff;">
                 <th>Customer</th>
                 <th>License Number</th>
                 <th>Email</th>
