--- a/Ration1/templates/base.html
+++ b/Ration1/templates/base.html
@@ -80,8 +80,9 @@
               <nav class="header__menu">
                   <ul>
                       <li class="active"><a href="/">Home</a></li>
-                      <li><a href="/">Blog</a></li>
-                      <li><a href="/">Contact</a></li>
+                      <li><a href="https://civilsupplieskerala.gov.in/">e-Service</a></li>
+                      <li><a href="contact">Contact</a></li>
+                      <li><a href="blog">BlOG</a></li>
                       <li><a href="#">Register</a>
                         <ul class="header__menu__dropdown">
                             <li><a  href="customerreg">Customer</a></li>
@@ -279,7 +280,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer__about">
                     <div class="footer__about__logo">
-                        <a href="./index.html"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
+                        <a href="/"><img src="{% static 'assets/img/logo.png' %}" alt=""></a>
                     </div>
                     <ul>
                         <li>Address: kerala</li>
