--- a/Ration1/templates/cust_reg.html
+++ b/Ration1/templates/cust_reg.html
@@ -191,6 +191,11 @@
                             </div>
                             <div class="form-group">
                                 <div class="form-group">
+                                    <label for="location">Place:</label>
+                                    <input class="form-control"  type="location" name="location" placeholder="Place">
+                                </div>
+                            <div class="form-group">
+                                <div class="form-group">
                                     <label for="password">Password:</label>
                                     <input class="form-control" type="password" id="password" name="password" placeholder="Password">
                                     <span id="passwordError" class="text-danger"></span>
